# KernelTrace

./: .gitignore  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  KernelTrace.slnx  README.md  global.json
.github/workflows/: build.yml  release.yml
benchmarks/KernelTrace.Benchmarks/: EventProcessingBenchmarks.cs  KernelTrace.Benchmarks.csproj  Program.cs  RingBufferBenchmarks.cs
docs/: api-reference.md  architecture.md  getting-started.md  probes.md  samples.md
native/: CMakeLists.txt
native/libkerneltrace/: kerneltrace.c  kerneltrace.h
native/probes/: block_io.bpf.c  common.h  container_monitor.bpf.c  dotnet_runtime.bpf.c  fs_io.bpf.c  kernel_internals.bpf.c  memory_profiler.bpf.c  network_monitor.bpf.c  scheduler_profiler.bpf.c  security_guard.bpf.c  stack_sampler.bpf.c  usdt_python.bpf.c  vmlinux.h  vmlinux.h.bak
native/scripts/: build-and-install.sh  gen-vmlinux.sh
samples/BlockIoAnalyzer/: BlockIoAnalyzer.csproj  Program.cs
samples/ContainerMonitor/: ContainerMonitor.csproj  Program.cs
samples/CoreRelocations/: CoreRelocations.csproj  Program.cs
samples/DotNetRuntime/: DotNetRuntime.csproj  Program.cs
samples/FileIoMonitor/: FileIoMonitor.csproj  Program.cs
samples/KernelInternals/: KernelInternals.csproj  Program.cs
samples/MemoryProfiler/: MemoryProfiler.csproj  Program.cs
samples/NetworkMonitor/: NetworkMonitor.csproj  Program.cs
samples/SchedulerProfiler/: Program.cs  SchedulerProfiler.csproj
samples/SecurityGuard/: Program.cs  SecurityGuard.csproj
samples/StackSampler/: Program.cs  StackSampler.csproj
samples/UsdtPythonTracer/: Program.cs  UsdtPythonTracer.csproj
src/KernelTrace/: GlobalUsings.cs  KernelTrace.csproj
src/KernelTrace.AspNetCore/: KernelTrace.AspNetCore.csproj  KernelTraceHostedService.cs  KernelTraceServiceCollectionExtensions.cs
src/KernelTrace.SourceGenerators/: AnalyzerReleases.Shipped.md  AnalyzerReleases.Unshipped.md  AssemblyInfo.cs  CStructParser.cs  DiagnosticDescriptors.cs  KernelEventGenerator.cs  KernelTrace.SourceGenerators.csproj  Polyfills.cs  StructEmitter.cs
src/KernelTrace/Diagnostics/: KernelSymbolResolver.cs  KernelTraceMetrics.cs
src/KernelTrace/Events/: IKernelEvent.cs  KernelEventAttribute.cs
src/KernelTrace/Exceptions/: KernelTraceException.cs
src/KernelTrace/Interop/: INativeInterop.cs  LibBpfInterop.cs  MappedRingBuffer.cs  NativeHandles.cs  NativeMethods.cs
src/KernelTrace/Maps/: BpfMap.cs  BpfMapInfo.cs  BpfMapUpdateFlags.cs  StackTraceMap.cs
src/KernelTrace/Probes/: ProbeSpec.cs
src/KernelTrace/RingBuffer/: RingBufferReader.cs  RingBufferRecord.cs
src/KernelTrace/Sessions/: KernelTraceLoggerExtensions.cs  KernelTraceSession.cs  SessionOptions.cs
src/dotnet-kerneltrace/: AssemblyInfo.cs  Program.cs  dotnet-kerneltrace.csproj
tests/KernelTrace.Generators.Tests/: KernelEventGeneratorTests.cs  KernelTrace.Generators.Tests.csproj
tests/KernelTrace.IntegrationTests/: GlobalUsings.cs  IntegrationTestHelpers.cs  KernelTrace.IntegrationTests.csproj  KernelTracingIntegrationTests.cs  PlatformSanityTests.cs  SkipAttributes.cs
tests/KernelTrace.Tests/: GlobalUsings.cs  KernelTrace.Tests.csproj
tests/KernelTrace.Tests/Diagnostics/: KernelSymbolResolverTests.cs  KernelTraceMetricsTests.cs
tests/KernelTrace.Tests/Fakes/: FakeNativeInterop.cs  FakeRingBuffer.cs
tests/KernelTrace.Tests/Maps/: BpfMapTests.cs  StackTraceMapTests.cs
tests/KernelTrace.Tests/Probes/: ProbeSpecTests.cs  UsdtSpecTests.cs
tests/KernelTrace.Tests/RingBuffer/: RingBufferReaderTests.cs  RingBufferRecordTests.cs
tests/KernelTrace.Tests/Sessions/: KernelTraceSessionTests.cs
